--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "rimraf dist && tsc && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
     "analyze": "cem analyze --litelement",
-    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\""
+    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\" \"npm run start:server\"",
+    "start:server": "node server/index.js"
   },
   "dependencies": {
     "@simplr-wc/router": "^7.0.0-rc19",
@@ -37,6 +38,8 @@
     "@web/test-runner": "next",
     "babel-plugin-template-html-minifier": "^4.1.0",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
     "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
