--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:server": "node server/index.js"
   },
   "dependencies": {
+    "@lion/icon": "^0.15.0",
     "@simplr-wc/router": "^7.0.0-rc19",
     "lit": "^2.0.2"
   },
@@ -40,10 +41,10 @@
     "babel-plugin-template-html-minifier": "^4.1.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
     "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "express": "^4.17.3",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.4.1",
