--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@lion/icon": "^0.15.0",
+    "@lion/select": "^0.15.0",
     "@simplr-wc/router": "^7.0.0-rc19",
-    "lit": "^2.0.2"
+    "lit": "^2.0.2",
+    "lit-element-state": "^1.7.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
