added lion/ajax lib and skipLibCheck in tsconfig

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:server": "node server/index.js"
   },
   "dependencies": {
+    "@lion/ajax": "^0.14.0",
     "@lion/icon": "^0.15.0",
     "@lion/select": "^0.15.0",
     "@simplr-wc/router": "^7.0.0-rc19",
