--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "rimraf dist && tsc && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
     "analyze": "cem analyze --litelement",
-    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\" \"npm run start:server\"",
+    "start": "tsc && concurrently -k -r  \"npm run start:server\" \"tsc --watch --preserveWatchOutput\" \"wds\"",
     "start:client": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
     "start:server": "node server/index.js"
   },
